<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobitouch.couponapp.Activity.AccountRegistration.RegisterActivity">
   <LinearLayout
       android:layout_centerVertical="true"
       android:layout_centerHorizontal="true"
       android:orientation="vertical"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <TextView
           android:layout_margin="10dp"
           android:gravity="center"
           android:textSize="20sp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/app_name"/>
       <TextView
           android:gravity="center"
           android:text="@string/title_content"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
       <Button
           android:layout_margin="20dp"
           android:text="@string/term_and_user"
           android:layout_width="220dp"
           android:layout_height="wrap_content" />
       <android.support.v7.widget.AppCompatCheckBox
           android:id="@+id/cb_term_use"
           android:text="@string/accept_term_and_user"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
       <Button
           android:id="@+id/txt_login"
           android:layout_margin="20dp"
           android:text="@string/register"
           android:layout_width="220dp"
           android:layout_height="wrap_content" />
   </LinearLayout>
</RelativeLayout>
